# web-content-extraction-benchmark

./: .gitignore  .gitmodules  DATASET_SUMMARY.md  FINAL_METHODOLOGY_CHECK.md  FIXES_APPLIED.md  FUTURE_EXTRACTORS.md  METHODOLOGY_COMPARISON.md  PLAN.md  PLAN_v2_images.md  README.md  READY_FOR_ANNOTATION.md  USAGE.md  benchmark-comparison.sh  requirements.txt  run-go-benchmark.sh  run-rust-benchmark.sh  run_llm_benchmarks.sh
annotation_tool/: add_new_files.py  aggressive_fix.py  audit_gt.py  batch_approve.py  batch_audit.py  file_list.json  find_new_files.py  index.html  new_candidates.json  progress.json  server.py
benchmark/: id-mapping.json
data/: annotation_quality_report.json  category_removal_report.json  directory_exclusion_report.json  exclude_js_low.json  filtered_urls_removed.csv  final_urls_to_annotate.csv  incomplete_annotation_flags.json  metadata.csv  metadata_filtered.csv  metadata_remaining_404.csv  metadata_remaining_filtered.csv  metadata_remaining_final.csv  metadata_remaining_quality.csv  metadata_subset_2000.csv  metadata_subset_filtered.csv  metadata_subset_final.csv  metadata_subset_quality.csv  quality_analysis.json  reannotate_gt_incomplete.json  reannotation_log_20260103_093342.json  reannotation_log_20260103_123233.json  reannotation_log_20260103_151904.json  reannotation_queue.csv  reannotation_queue.json  test_annotation.json  urls.txt  verified_benchmark_files.json
docs/: architecture.md  category-page-urls.md  index.md  (+11 more)
rust-extractors/dom-content-extraction-cli/: Cargo.toml
rust-extractors/dom-content-extraction-cli/src/: main.rs
(+7513 files in other folders)
