[package]
name = "dom-content-extraction-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dce-extract"
path = "src/main.rs"

[dependencies]
# Disable default features (CLI, markdown) to avoid heavy deps like boring2/cmake
dom-content-extraction = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
